PaperZD characters and children created, input system created, and enabled in King BP

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 EditorStartupMap=/Game/_TowerClimb/Maps/MAP_Debug.MAP_Debug
+GlobalDefaultGameMode=/Game/_TowerClimb/Blueprints/GM_TowerClimb.GM_TowerClimb_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
