Tweaked King BP and Platform Char BP
-In King BP, changed spring arm length to 500 from 300. Also gave the camera some lag.
-In the Platform Char BP, changed gravity from 1 to 3. Changed jump velocity from 420 to 1100. Changed air control from 0.05 to 0.3

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-EditorStartupMap=/Game/_TowerClimb/Maps/MAP_Debug.MAP_Debug
+GameDefaultMap=/Game/_TowerClimb/Maps/MAP_Tower.MAP_Tower
+EditorStartupMap=/Game/_TowerClimb/Maps/MAP_Tower.MAP_Tower
 GlobalDefaultGameMode=/Game/_TowerClimb/Blueprints/GM_TowerClimb.GM_TowerClimb_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
